# BizGuard

./: .pre-commit-config.yaml  README.md
bizguard/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
bizguard/initialize/: bizguard_initialize.sh
bizguard/src/: pyproject.toml
bizguard/src/apps/accounts/: admin.py  models.py  signals.py  urls.py
bizguard/src/apps/accounts/migrations/: 0001_initial.py  0002_remove_user_plan_choices_alter_user_first_name_and_more.py  0003_alter_user_deleted_by_alter_userprofile_deleted_by.py  0004_user_description_userprofile_description.py  0005_rename_phonenumber_user_phone_number_and_more.py  0006_alter_user_telegram_user_id_and_more.py
bizguard/src/apps/alerts/: admin.py  models.py  urls.py
bizguard/src/apps/alerts/migrations/: 0001_initial.py  0002_remove_alertrule_alert_rules_website_90f538_idx_and_more.py
bizguard/src/apps/analytics/: admin.py  models.py  urls.py
bizguard/src/apps/analytics/migrations/: 0001_initial.py
bizguard/src/apps/core/: admin.py  models.py
bizguard/src/apps/core/migrations/: 0001_initial.py
bizguard/src/apps/monitoring/: admin.py  models.py  urls.py
bizguard/src/apps/monitoring/api/: urls.py
bizguard/src/apps/monitoring/api/serializers/: website.py
bizguard/src/apps/monitoring/api/services/: monitoring.py
bizguard/src/apps/monitoring/api/views/: __init__.py  website.py
bizguard/src/apps/monitoring/migrations/: 0001_initial.py  0002_uptimecheck_description_uptimestats_description_and_more.py  0003_rename_website_user_id_1c5543_idx_websites_user_id_c3b78e_idx_and_more.py  0004_uptimecheck_redirect_url_alter_uptimecheck_uptime.py  0005_website_auth_token.py
bizguard/src/apps/payments/: admin.py  models.py  urls.py
bizguard/src/apps/payments/migrations/: 0001_initial.py  0002_remove_payment_payment_choices_alter_payment_status_and_more.py
bizguard/src/apps/security/: admin.py  models.py  urls.py
bizguard/src/apps/security/migrations/: 0001_initial.py  0002_rename_scurity_sca_website_b8d1b7_idx_security_sc_website_7167a9_idx_and_more.py
bizguard/src/apps/telegram/: admin.py  models.py  urls.py
bizguard/src/apps/telegram/migrations/: 0001_initial.py  0002_rename_telegrammessages_telegrammessage.py
bizguard/src/config/: settings.py  urls.py
bizguard/src/utils/: base_model.py  choices.py
postgres/: docker-compose.yml
